--- a/src/components/FeaturedJobs/FeaturedJobs.css
+++ b/src/components/FeaturedJobs/FeaturedJobs.css
@@ -1,5 +1,68 @@
-.featured-jobs-data{
+.all-job {
+    margin-right: 25px;
+    border: 1px solid whitesmoke;
+    border-radius: 8px;
+    background: whitesmoke;
+    padding: 20px;
+    text-align: left;
+    margin-bottom: 24px;
+}
+
+.all-job img {
+    margin-bottom: 32px;
+}
+
+
+.all-job h3 {
+    margin-bottom: 8px;
+    font-family: Manrope;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 33px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #474747;
+}
+
+.featured-jobs-data {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     padding: 0px 150px;
+}
+
+.job-des {
+    display: flex;
+    gap: 15px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    color: #7E90FE;
+}
+
+.job-des p {
+    border: 1px solid #9873FF;
+    border-radius: 4px;
+    padding: 9px 19px;
+}
+
+.job-des2 {
+    display: flex;
+    gap: 15px;
+}
+
+.job-des2 p {
+    color: #757575;
+}
+
+.company {
+    color: #757575;
+}
+
+.btn-details {
+    margin-top: 24px;
+    height: 35px;
+    width: 100px;
+    border-radius: 4px;
+    background: #7E90FE;
+    color: #FFFFFF;
+    border: none;
 }
