--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -54,27 +54,7 @@
     margin-top: 32px;
 }
 
-/* .jobs-data {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.jobs-cat {
+.btn-see-all {
     text-align: center;
+    margin-bottom: 40px;
 }
-
-.jobs-cat h2 {
-    margin-bottom: 16px;
-    font-family: Manrope;
-    font-size: 48px;
-    font-weight: 800;
-    line-height: 66px;
-    letter-spacing: 0em;
-}
-
-.jobs-cat p{
-    color: #757575;
-    margin-bottom: 32px;
-} */
