Change to normal header to clickable header name. Now just click on 'WorkForce', it will redirect to home

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -14,9 +14,19 @@
 }
 
 .question h2{
+    text-align: center;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    font-size: 36px;
+    font-weight: 800;
+    color: crimson;
+}
+
+.question h3{
     border: 1px solid lightgray;
     padding: 10px;
     border-radius: 8px;
     background: whitesmoke;
     margin-bottom: 15px;
 }
+
